# aiomodrinth

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
aiomodrinth/: __init__.py  _requests.py  api.py  common.py  exceptions.py  facets.py  license.py
aiomodrinth/aiomodrinth.egg-info/: PKG-INFO  SOURCES.txt
aiomodrinth/models/: enums.py  gallery.py  member.py  project.py  search.py  user.py  utils.py
examples/: modify_user.py  search.py
