[tool.poetry]
name = "aiomodrinth"
version = "0.1.1"
description = "Async API wrapper for modrinth.com"
authors = ["Xemay"]
license = "MIT"
homepage = "https://github.com/Xemay/aiomodrinth"

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
